--- a/index.html
+++ b/index.html
@@ -529,12 +529,12 @@ curl -L -X GET "https://supplier-api-977359606390.us-central1.run.app?sku=PRODUC
   <script>
     // --- Firebase Configuration ---
     const firebaseConfig = {
-      apiKey: "AIzaSyDHhEnfIz2evfEH-Vfpujqnu_MrE57p7v4",
-      authDomain: "supplier-database-45001.firebaseapp.com",
-      projectId: "supplier-database-45001",
-      storageBucket: "supplier-database-45001.appspot.com",
-      messagingSenderId: "977359606390",
-      appId: "1:977359606390:web:03be683a1e7c7d71bc4557"
+      apiKey: "AIzaSyDwEOL7Gu6RLmMyBn-a0usyGMv5EwEFt-s",
+      authDomain: "supplier-database-v2.firebaseapp.com",
+      projectId: "supplier-database-v2",
+      storageBucket: "supplier-database-v2.firebasestorage.app",
+      messagingSenderId: "1071977803085",
+      appId: "1:1071977803085:web:4489758cbb8594cc7a5b04"
     };
 
     // --- Initialize Firebase ---
